possible fix for an overflow issue on form buttons

--- a/assets/css/hacks.css
+++ b/assets/css/hacks.css
@@ -266,3 +266,7 @@ a.tag {
   word-break: break-word;
   text-overflow: ellipsis;
 }
+
+.field-buttons ul {
+  overflow-y: hidden;
+}
